# KHRJ---Senior-Design

install/: local_setup.sh  setup.sh
install/diffdrive_arduino/share/diffdrive_arduino/: fake_robot.launch.py  fake_robot_hardware.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml  robot_hardware.xml  test_robot.launch.py
install/gazebo_ros2_control/include/gazebo_ros2_control/: gazebo_ros2_control_plugin.hpp  gazebo_system.hpp  gazebo_system_interface.hpp
install/gazebo_ros2_control/share/gazebo_ros2_control/: gazebo_hardware_plugins.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/gazebo_ros2_control_demos/lib/gazebo_ros2_control_demos/: example_diff_drive  example_effort  example_gripper  example_position  example_velocity
install/gazebo_ros2_control_demos/share/gazebo_ros2_control_demos/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_package/lib/my_package/: controller  detection  display
install/my_package/share/my_package/: package.sh
install/senior_design/share/senior_design/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/serial/include/serial/: serial.h  v8stdint.h
log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/tank_controller/: CMakeLists.txt
src/tank_controller/src/tank_controller/: start_robot.py
(+209 files in other folders)
